k8s/pre-prod/crd-spec.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio-ui
  labels:
    name: studio-ui
    project: blooprinted
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: "CI_JOB_ID"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: studio-ui
      project: blooprinted
  template:
    metadata:
      labels:
        name: studio-ui
        project: blooprinted
        version: 'CI_COMMIT_SHORT_SHA'
        gitlab-job-id: "CI_JOB_ID"
    spec:
      securityContext: {}
      containers:
        - name: studio-ui
          securityContext: {}
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 150
            initialDelaySeconds: 2
          # resources: 
          #   requests: 
          #     memory: ""
          #     cpu: ""
          #   limits:
          #     memory: "100Mi"
          #     cpu: "10m" 

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: studio-ui
  labels:
    name: studio-ui
    project: blooprinted
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: "CI_JOB_ID"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: studio-ui
    project: blooprinted
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: studio-ui
  labels:
    name: studio-ui
    project: blooprinted
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: "CI_JOB_ID"
spec:
  hosts:
    - studio.blooprinted.cilalabs.dev
  gateways:
    - istio-system/blooprinted-gateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: studio-ui
